syntax = "proto3";

import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";

package com.medrec.grpc.users;

service DoctorService {
  rpc CreateDoctor (Doctor) returns (isSuccessfulResponse);
  rpc CreateDoctorSpecialtyId (DoctorSpecialtyId) returns (isSuccessfulResponse);
  rpc GetDoctorById (google.protobuf.Int32Value) returns (DoctorResponse);
  rpc GetDoctorByEmail (google.protobuf.StringValue) returns (DoctorResponse);
  rpc GetAllDoctors (google.protobuf.Empty) returns (DoctorList);
  rpc GetAllGPDoctors (google.protobuf.Empty) returns (DoctorList);
  rpc UpdateDoctor (Doctor) returns (isSuccessfulResponse);
  rpc DeleteDoctorById (google.protobuf.Int32Value) returns (isSuccessfulResponse);
}

service PatientService {
  rpc CreatePatient (Patient) returns (isSuccessfulResponse);
  rpc CreatePatientDoctorId (PatientDoctorId) returns (isSuccessfulResponse);
  rpc GetPatientById (google.protobuf.Int32Value) returns (PatientResponse);
  rpc GetPatientByEmail (google.protobuf.StringValue) returns (PatientResponse);
  rpc GetAllPatients (google.protobuf.Empty) returns (PatientList);
  rpc UpdatePatient (Patient) returns (isSuccessfulResponse);
  rpc DeletePatientById (google.protobuf.Int32Value) returns (isSuccessfulResponse);
}

service SpecialtyService {
  rpc CreateSpecialty (Specialty) returns (isSuccessfulResponse);
  rpc GetSpecialtyById (google.protobuf.Int32Value) returns (SpecialtyResponse);
  rpc GetAllSpecialties (google.protobuf.Empty) returns (SpecialtiesList);
  rpc UpdateSpecialty (Specialty) returns (isSuccessfulResponse);
  rpc DeleteSpecialtyById (google.protobuf.Int32Value) returns (isSuccessfulResponse);
}

message Doctor {
  optional int32 id = 1;
  string firstName = 2;
  string lastName = 3;
  string email = 4;
  string password = 5;
  bool isGp = 6;
  Specialty specialty = 7;
}

message DoctorSpecialtyId {
  optional int32 id = 1;
  string firstName = 2;
  string lastName = 3;
  string email = 4;
  string password = 5;
  bool isGp = 6;
  int32 specialtyId = 7;
}

message DoctorResponse {
  optional Doctor doctor = 1;
  bool exists = 2;
}

message Patient {
  optional int32 id = 1;
  string firstName = 2;
  string lastName = 3;
  string email = 4;
  string password = 5;
  string pin = 6;
  Doctor gp = 7;
  bool isHealthInsured = 8;
}

message PatientDoctorId {
  optional int32 id = 1;
  string firstName = 2;
  string lastName = 3;
  string email = 4;
  string password = 5;
  string pin = 6;
  int32 gpId = 7;
  bool isHealthInsured = 8;
}

message PatientResponse {
  optional Patient patient = 1;
  bool exists = 2;
}

message Specialty {
  optional int32 id = 1;
  string specialtyName = 2;
  string specialtyDescription = 3;
}

message SpecialtyResponse {
  optional Specialty specialty = 1;
  bool exists = 2;
}

message isSuccessfulResponse {
  bool isSuccessful = 1;
  optional string message = 2;
}

message DoctorList {
  repeated Doctor doctors = 1;
}

message PatientList {
  repeated Patient patients = 1;
}

message SpecialtiesList {
  repeated Specialty specialties = 1;
}