syntax = "proto3";

import "users.proto";

package com.medrec.grpc.auth;

service AuthService {
  rpc RegisterPatient (com.medrec.grpc.users.CreatePatientRequest) returns (RegisterResponse);
  rpc RegisterDoctor (com.medrec.grpc.users.CreateDoctorRequest) returns (RegisterResponse);
  rpc LogPatientIn (LoginRequest) returns (LoginResponse);
  rpc LogDoctorIn (LoginRequest) returns (LoginResponse);
  rpc LogAdminIn (LoginRequest) returns (LoginResponse);
  rpc AuthorizeRequest (AuthorizationRequest) returns (AuthorizationResponse);
  rpc ValidateToken (TokenRequest) returns (TokenResponse);
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message TokenRequest {
  string token = 1;
}

message TokenResponse {
  bool valid = 1;
  int32 id = 2;
  string firstName = 3;
  string lastName = 4;
  string email = 5;
  string role = 6;
}

message LoginResponse {
  optional string token = 2;
  optional string role = 3;
}

message RegisterResponse {
  optional string token = 2;
  optional string role = 3;
}

message AuthorizationRequest {
  string token = 1;
  repeated string requiredRoles = 2;
}

message AuthorizationResponse {
  bool isTokenAuthorized = 1;
}